[project]
name = "agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.12",
    "google>=3.0.0",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.5",
    "langsmith>=0.10.5",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
